# paradox

./: .flake8  README.md  mypy.ini  publish.py  pyproject.toml  python3.Dockerfile  setup.py
.github/workflows/: ci.yaml  code-formatting.yaml
_paradoxtest/: __init__.py
paradox/: expressions.py  interfaces.py  typing.py
paradox/generate/: files.py  statements.py
paradox/output/: __init__.py  php.py  python.py  typescript.py
tests/: conftest.py  test_expressions.py  test_generate_interface.py  test_importing.py  test_interface_AcceptsStatements.py  test_old_FileSpec_classes.py  test_output_Script.py  test_types.py
tests/test_generate_statements/: test_ConditionalBlock.py  test_DictBuilder.py  test_HardCodedStatement.py  test_ListAppendStatement.py  test_generate_classes.py  test_generate_function_blocks.py  test_generate_try_catch.py
