[tool.poetry]
name = "paradox-codegen"
version = "0.15.0"
description = ""
license = "MIT"
authors = []
packages = [
    { include = "paradox" }
]
# make sure py.typed files are included when installing via poetry (setup.py does this differently)
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.6,>=3.6.2"
dataclasses = {version = "^0.7", python = "<3.7"}
# needed for typing_extensions.Literal
typing-extensions = {version = "^3.7.4", python = "<3.8"}
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.901"
flake8 = "^3.8.4"
pytest = "^6.2.1"
types-dataclasses = "^0.6.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
