[tool.poetry]
name = "paradox-codegen"
version = "0.18.5"
description = ""
license = "MIT"
authors = []
packages = [
    { include = "paradox" }
]
# make sure py.typed files are included when installing via poetry (setup.py does this differently)
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^24.3.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.901"
flake8 = "^3.8.4"
pytest = "^7.0.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
